--- a/index.html
+++ b/index.html
@@ -69,11 +69,10 @@
             <ul class="lang">
                 <li @click="changeLang(value)" v-for="(value, key) in languages" :key="value">{{key}}</li>
             </ul>
-            <div class="meta">
-                <a href="https://ddiu.site">Diu</a>
-                <a href="https://github.com/ddiu8081/oreooo">Github</a>
-            </div>
         </footer>
+        <div class="meta" style="width:100%;text-align: center;position: fixed; bottom: 0">
+            <a href="https://github.com/ddiu8081/oreooo">Github</a>
+        </div>
     </div>
     <script src="assets/js/vue.min.js"></script>
     <script src="assets/js/vue-i18n.js"></script>
